# EdgeImpulseCMake

./: CMakeLists.txt  README.md
